--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
 <body>
 
   <header>
-    <h3>loopstudios</h3>
-    <nav></nav>
+    <div>
+      <h3>loopstudios</h3>
+    </div>
+    <div class="nav-ham">
+      <div class="nav-ham__line"></div>
+      <div class="nav-ham__line"></div>
+      <div class="nav-ham__line"></div>
+    </div>
   </header>
 
   <section class="hero">
