--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 
   <header>
     <div>
-      <h3>loopstudios</h3>
+      <img src="images/logo.svg">
     </div>
-    <div class="nav-ham">
-      <div class="nav-ham__line"></div>
-      <div class="nav-ham__line"></div>
-      <div class="nav-ham__line"></div>
+    <input type="checkbox" name="menu-state" id="menu-state">
+    <div class="menu-toggle">
+      <label for="menu-state">
+        <div class="menu-toggle__line"></div>
+      </label>
     </div>
   </header>
 
