added modal links

--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@
   <title>Frontend Mentor | Loopstudios landing page</title>
 <body>
 
+  <div class="modal">
+    <nav>
+      <a href="">About</a>
+      <a href="">Careers</a>
+      <a href="">Events</a>
+      <a href="">Products</a>
+      <a href="">Support</a>
+    </nav>
+  </div>
+
   <header>
     <div>
-      <img src="images/logo.svg">
+      <a href="">
+        <img src="images/logo.svg">
+      </a>
     </div>
     <input type="checkbox" name="menu-state" id="menu-state">
     <div class="menu-toggle">
