--- a/index.html
+++ b/index.html
@@ -40,49 +40,49 @@
     <img src="images/mobile/image-hero.jpg" alt="loopstudios hero image" >
   </section>
 
-  <section class="vr-section">
+  <section class="vr-section margin-top">
     <img src="images/mobile/image-interactive.jpg" alt="interactive vr image" >
     <h2>The Leader in Interactive VR</h2>
     <p>Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their brand.</p>
   </section>
 
-  <section class="our-creations">
+  <section class="our-creations margin-top">
     <h2>Our Creations</h2>
     <div>
-      <h4>Deep Earth</h4>
+      <h4>Deep <br> Earth</h4>
       <img src="images/mobile/image-deep-earth.jpg" alt="">
     </div>
 
     <div>
-      <h4>Night Arcade</h4>
+      <h4>Night <br> Arcade</h4>
       <img src="images/mobile/image-night-arcade.jpg" alt="">
     </div>
 
     <div>
-      <h4>Soccer Team VR</h4>
+      <h4>Soccer <br>Team VR</h4>
       <img src="images/mobile/image-soccer-team.jpg" alt="">
     </div>
 
     <div>
-      <h4>The Grid</h4>
+      <h4>The <br>Grid</h4>
       <img src="images/mobile/image-grid.jpg" alt="">
     </div>
 
     <div>
-      <h4>From Up Above VR</h4>
+      <h4>From Up <br>Above VR</h4>
       <img src="images/mobile/image-from-above.jpg" alt="">
     </div>
 
     <div>
-      <h4>Pocket Borealis</h4>
+      <h4>Pocket <br>Borealis</h4>
       <img src="images/mobile/image-pocket-borealis.jpg" alt="">
     </div>
     <div>
-      <h4>The Curiosity</h4>
+      <h4>The <br>Curiosity</h4>
       <img src="images/mobile/image-curiosity.jpg" alt="">
     </div>
     <div>
-      <h4>Make It Fisheye</h4>
+      <h4>Make It <br>Fisheye</h4>
       <img src="images/mobile/image-fisheye.jpg" alt="">
     </div>
 
@@ -90,21 +90,21 @@
     <button>See All</button>
   </section>
 
-  <footer>
-    <h3>loopstudios</h3>
+  <footer class="margin-top">
+    <img src="images/logo.svg">
     <nav>
       <a>About</a>
       <a>Careers</a>
       <a>Events</a>
       <a>Products</a>
-      <a>Suppor</a>
+      <a>Support</a>
     </nav>
 
-    <nav>
-      <a>fb</a>
-      <a>tw</a>
-      <a>pin</a>
-      <a>ig</a>
+    <nav class="social-media">
+      <a><img src="images/icon-facebook.svg"></a>
+      <a><img src="images/icon-twitter.svg"></a>
+      <a><img src="images/icon-pinterest.svg"></a>
+      <a><img src="images/icon-instagram.svg"></a>
     </nav>
 
     <p>© 2021 Loopstudios. All rights reserved.</p>
