--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <section class="hero">
     <h1>Immersive Experiences That Deliver</h1>
     <img src="images/mobile/image-hero.jpg" alt="loopstudios hero image" >
+    <img class="hero__desktop" src="images/desktop/image-hero.jpg" alt="loopstudios hero image" >
   </section>
 
   <section class="vr-section margin-top">
@@ -93,18 +94,18 @@
   <footer class="margin-top">
     <img src="images/logo.svg">
     <nav>
-      <a>About</a>
-      <a>Careers</a>
-      <a>Events</a>
-      <a>Products</a>
-      <a>Support</a>
+      <a href="">About</a>
+      <a href="">Careers</a>
+      <a href="">Events</a>
+      <a href="">Products</a>
+      <a href="">Support</a>
     </nav>
 
     <nav class="social-media">
-      <a><img src="images/icon-facebook.svg"></a>
-      <a><img src="images/icon-twitter.svg"></a>
-      <a><img src="images/icon-pinterest.svg"></a>
-      <a><img src="images/icon-instagram.svg"></a>
+      <a href=""><img src="images/icon-facebook.svg"></a>
+      <a href=""><img src="images/icon-twitter.svg"></a>
+      <a href=""><img src="images/icon-pinterest.svg"></a>
+      <a href=""><img src="images/icon-instagram.svg"></a>
     </nav>
 
     <p>© 2021 Loopstudios. All rights reserved.</p>
