working on responsiveness

--- a/index.html
+++ b/index.html
@@ -33,12 +33,22 @@
         <div class="menu-toggle__line"></div>
       </label>
     </div>
+
+    <nav>
+      <a href="">About</a>
+      <a href="">Careers</a>
+      <a href="">Events</a>
+      <a href="">Products</a>
+      <a href="">Support</a>
+    </nav>
   </header>
 
   <section class="hero">
     <h1>Immersive Experiences That Deliver</h1>
-    <img src="images/mobile/image-hero.jpg" alt="loopstudios hero image" >
-    <img class="hero__desktop" src="images/desktop/image-hero.jpg" alt="loopstudios hero image" >
+    <picture>
+      <source srcset="images/desktop/image-hero.jpg" media="(min-width: 750px)">
+      <img src="images/mobile/image-hero.jpg" alt="loopstudios hero image" >
+    </picture>
   </section>
 
   <section class="vr-section margin-top">
