--- a/index.html
+++ b/index.html
@@ -102,8 +102,10 @@
   </section>
 
   <footer class="margin-top">
-    <img src="images/logo.svg">
-    <nav>
+    <div>
+      <img src="images/logo.svg">
+    </div>
+    <nav class="footer-nav">
       <a href="">About</a>
       <a href="">Careers</a>
       <a href="">Events</a>
@@ -118,7 +120,7 @@
       <a href=""><img src="images/icon-instagram.svg"></a>
     </nav>
 
-    <p>© 2021 Loopstudios. All rights reserved.</p>
+    <p class="copyright">© 2021 Loopstudios. All rights reserved.</p>
   </footer>
   <script src="index.js"></script>
 </body>
