working on active states

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     </div>
 
     <nav>
-      <a href="">About</a>
-      <a href="">Careers</a>
-      <a href="">Events</a>
-      <a href="">Products</a>
-      <a href="">Support</a>
+      <div><a href="">About</a></div>
+      <div><a href="">Careers</a></div>
+      <div><a href="">Events</a></div>
+      <div><a href="">Products</a></div>
+      <div><a href="">Support</a></div>
     </nav>
   </header>
 
@@ -53,50 +53,75 @@
 
   <section class="vr-section margin-top">
     <img src="images/mobile/image-interactive.jpg" alt="interactive vr image" >
-    <h2>The Leader in Interactive VR</h2>
-    <p>Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their brand.</p>
+    <div>
+      <h2>The Leader in Interactive VR</h2>
+      <p>Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their brand.</p>
+    </div>
   </section>
 
   <section class="our-creations margin-top">
     <h2>Our Creations</h2>
     <div>
       <h4>Deep <br> Earth</h4>
-      <img src="images/mobile/image-deep-earth.jpg" alt="">
+      <picture>
+        <source srcset="images/desktop/image-deep-earth.jpg" media="(min-width: 1439px)">
+        <img src="images/mobile/image-deep-earth.jpg" alt="">
+      </picture>
     </div>
 
     <div>
       <h4>Night <br> Arcade</h4>
-      <img src="images/mobile/image-night-arcade.jpg" alt="">
+      <picture>
+        <source srcset="images/desktop/image-night-arcade.jpg" media="(min-width: 1439px)">
+        <img src="images/mobile/image-night-arcade.jpg" alt="">
+      </picture>
     </div>
 
     <div>
       <h4>Soccer <br>Team VR</h4>
-      <img src="images/mobile/image-soccer-team.jpg" alt="">
+      <picture>
+        <source srcset="images/desktop/image-soccer-team.jpg" media="(min-width: 1439px)">
+        <img src="images/mobile/image-soccer-team.jpg" alt="">
+      </picture>
     </div>
 
     <div>
       <h4>The <br>Grid</h4>
-      <img src="images/mobile/image-grid.jpg" alt="">
+      <picture>
+        <source srcset="images/desktop/image-grid.jpg" media="(min-width: 1439px)">
+        <img src="images/mobile/image-grid.jpg" alt="">
+      </picture>
     </div>
 
     <div>
       <h4>From Up <br>Above VR</h4>
-      <img src="images/mobile/image-from-above.jpg" alt="">
+      <picture>
+        <source srcset="images/desktop/image-from-above.jpg" media="(min-width: 1439px)">
+        <img src="images/mobile/image-from-above.jpg" alt="">
+      </picture>
     </div>
 
     <div>
       <h4>Pocket <br>Borealis</h4>
-      <img src="images/mobile/image-pocket-borealis.jpg" alt="">
+      <picture>
+        <source srcset="images/desktop/image-pocket-borealis.jpg" media="(min-width: 1439px)">
+        <img src="images/mobile/image-pocket-borealis.jpg" alt="">
+      </picture>
     </div>
     <div>
       <h4>The <br>Curiosity</h4>
-      <img src="images/mobile/image-curiosity.jpg" alt="">
+      <picture>
+        <source srcset="images/desktop/image-curiosity.jpg" media="(min-width: 1439px)">
+        <img src="images/mobile/image-curiosity.jpg" alt="">
+      </picture>
     </div>
     <div>
       <h4>Make It <br>Fisheye</h4>
-      <img src="images/mobile/image-fisheye.jpg" alt="">
+      <picture>
+        <source srcset="images/desktop/image-fisheye.jpg" media="(min-width: 1439px)">
+        <img src="images/mobile/image-fisheye.jpg" alt="">
+      </picture>
     </div>
-
 
     <button>See All</button>
   </section>
