--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <header>
     <div>
-      <a href="">
+      <a href="#">
         <img src="images/logo.svg">
       </a>
     </div>
@@ -128,21 +128,21 @@
 
   <footer class="margin-top">
     <div>
-      <img src="images/logo.svg">
+      <a href="#"><img src="images/logo.svg"></a>
     </div>
     <nav class="footer-nav">
-      <a href="">About</a>
-      <a href="">Careers</a>
-      <a href="">Events</a>
-      <a href="">Products</a>
-      <a href="">Support</a>
+      <div><a href="">About</a></div>
+      <div><a href="">Careers</a></div>
+      <div><a href="">Events</a></div>
+      <div><a href="">Products</a></div>
+      <div><a href="">Support</a></div>
     </nav>
 
     <nav class="social-media">
-      <a href=""><img src="images/icon-facebook.svg"></a>
-      <a href=""><img src="images/icon-twitter.svg"></a>
-      <a href=""><img src="images/icon-pinterest.svg"></a>
-      <a href=""><img src="images/icon-instagram.svg"></a>
+      <div><a href=""><img src="images/icon-facebook.svg"></a></div>
+      <div><a href=""><img src="images/icon-twitter.svg"></a></div>
+      <div><a href=""><img src="images/icon-pinterest.svg"></a></div>
+      <div><a href=""><img src="images/icon-instagram.svg"></a></div>
     </nav>
 
     <p class="copyright">© 2021 Loopstudios. All rights reserved.</p>
